--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL='mongodb+srv://amartyasen:amartya@cluster0.tlqtekf.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://amartyasen895:Amartya@connectme.hyimubb.mongodb.net/CONNECT-ME'
 PORT=3001
 JWT_SECRET='amartya is cool'
